--- a/extensions/admonition/index.html
+++ b/extensions/admonition/index.html
@@ -876,10 +876,7 @@ massa, nec semper lorem quam in massa.</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
