--- a/extensions/codehilite/index.html
+++ b/extensions/codehilite/index.html
@@ -1467,10 +1467,7 @@ over <a href="https://hub.docker.com/r/squidfunk/mkdocs-material/">300 languages
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
