--- a/extensions/pymdown/index.html
+++ b/extensions/pymdown/index.html
@@ -696,10 +696,7 @@ The portion of text that should be erased must be enclosed in two tildes
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
