--- a/authors-notes/index.html
+++ b/authors-notes/index.html
@@ -397,10 +397,7 @@ Design theme for MkDocs.</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
