--- a/extensions/footnotes/index.html
+++ b/extensions/footnotes/index.html
@@ -485,10 +485,7 @@ content must be indented by four spaces.</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
