--- a/extensions/metadata/index.html
+++ b/extensions/metadata/index.html
@@ -552,10 +552,7 @@ be enabled on a per-document level:</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
