--- a/extensions/permalinks/index.html
+++ b/extensions/permalinks/index.html
@@ -406,10 +406,7 @@ permalink, a string can be passed, e.g.:</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
