--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -1232,10 +1232,7 @@ Material theme including more information regarding installation and usage:</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
