--- a/press/index.html
+++ b/press/index.html
@@ -394,10 +394,7 @@
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
