--- a/specimen/index.html
+++ b/specimen/index.html
@@ -944,10 +944,7 @@ sit amet laoreet nibh.</p>
           </div>
         
         powered by
-        <a href="https://www.mkdocs.org">MkDocs</a>
-        and
-        <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+        <a href="https://github.com/piauindie">PiauIndie</a>
       </div>
       
   <div class="md-footer-social">
